update name and things

--- a/src/App.css
+++ b/src/App.css
@@ -45,18 +45,7 @@
     margin-bottom: 0;
 }
 
-.box .h1,
-.box .h2,
-.box .h3,
-.box .h4,
-.box .h5,
-.box .h6,
-.box h1,
-.box h2,
-.box h3,
-.box h4,
-.box h5,
-.box h6 {
+.box .h1, .box .h2, .box .h3, .box .h4, .box .h5, .box .h6, .box h1, .box h2, .box h3, .box h4, .box h5, .box h6 {
     margin-bottom: .0;
 }
 
@@ -77,4 +66,26 @@ body {
 .footer {
     opacity: 0.4;
     margin: 2em;
+}
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile+label {
+    display: inline-block;
+}
+
+.inputfile + label {
+	cursor: pointer; /* "hand" cursor */
+}
+
+.inputfile:focus + label {
+	outline: 1px dotted #000;
+	outline: -webkit-focus-ring-color auto 5px;
 }
