--- a/src/App.css
+++ b/src/App.css
@@ -305,3 +305,60 @@ body {
         opacity: 1;
     }
 }
+
+
+.wrapped {
+    background-color: #FF2525;
+    padding: 2em;
+    width: 700px;
+    background-image: url('/background.jpg');
+    display: block;
+    background-size: 50%;
+    background-repeat: repeat;
+}
+.wrapped .title {
+    width: 100%
+}
+
+.wrapped .wrapped-content {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-between;
+}
+ .wrapped .number {
+     font-size: 4em;
+     line-height: 0.9;
+ }
+
+ .wrapped h2, .wrapped h3, .wrapped div {
+     padding: 0;
+        margin: 0;
+ }
+
+ .wrapped .subtitle {
+     text-transform: uppercase;
+     font-size: 1em;
+     padding-top: 20px;
+     font-weight: 200;
+
+ }
+ .wrapped .small {
+     margin-top: 10px;
+ }
+ .wrapped .item {
+     font-weight: 600;
+} 
+ .wrapped .artist {
+     opacity: 0.7;
+     font-weight: 300;
+ }
+ 
+ .wrapped img {
+     max-width: 150px;
+     margin-top: 1em;
+ }
+
+ .shareButton {
+    margin: 1em;
+ }
